--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,46 @@ h2{
 }
 
 
-/* Estilado pag sobre nosotros */
+/* Estilizado de pag. recetas saladas y recetas dulces */
+.carta{
+    box-shadow: 0px 3px 6px 0 black;
+    width: 250px;
+    margin: 15px 15px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 5px;
+    background-color: #F8ECD1;
+}
+
+.carta img{
+    border-radius: 5px;
+    object-fit: cover;
+    width: 100%;
+    height: 350px;
+    margin-bottom: 0;
+}
+
+.carta button{
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Dosis', sans-serif;
+    padding: 5px 5px;
+    border-radius: 20px;
+    border: 2px solid #85586F;
+    background-color: #85586F;
+    color: #F8ECD1;
+}
+
+.carta button:hover{
+    background-color: #AC7D88;
+    border: 2px solid #AC7D88;
+    color: #000000;
+}
+
+
+/* Estilado pag. sobre nosotros */
 .sobremi{
     display: flex;
     flex-direction: row;
@@ -115,7 +154,7 @@ h2{
 }
 
 
-/* Estilado pag contacto */
+/* Estilado pag. contacto */
 .conteiner-formulario{
     font-size: 24px;
     display: grid;
