--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,9 @@
+@import "variables";
+@import "body-main";
+@import "titulos";
 @import "nav";
+@import "carrusel";
+@import "grids";
+@import "formulario";
+@import "datos";
 @import "footer";
