--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,3 @@
-@import "variables";
-
 footer{
     position: absolute;
     bottom: 0;
@@ -15,5 +13,19 @@ footer{
 
     img{
         height: 40px;
+    }
+
+    a{
+        text-decoration: none;
+        color: $color1;
+    }
+
+    i{
+        padding: 0 10px;
+        transition: .3s;
+    }
+
+    i:hover{
+        color: $color5;
     }
 }
