--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,7 @@
 @import "nav";
 @import "carrusel";
 @import "grids";
+@import "sobremi";
 @import "formulario";
 @import "datos";
 @import "footer";
