--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,16 @@ h2 {
     border-radius: 10px;
     box-shadow: 0px 3px 6px 0 #85586F; }
 
+.sobremi {
+  display: grid;
+  grid-template-areas: "titulo titulo" "retrato info"; }
+  .sobremi .titulo {
+    grid-area: titulo; }
+  .sobremi .retrato {
+    grid-area: retrato; }
+  .sobremi .info {
+    grid-area: info; }
+
 .conteiner-formulario {
   display: grid;
   grid-template-areas: "caja1 caja1 caja1" "caja2 caja2 caja3" "caja2 caja2 caja3"; }
@@ -67,6 +77,12 @@ h2 {
     grid-area: caja2; }
   .conteiner-formulario .datos {
     grid-area: caja3; }
+
+.sobremi .info {
+  font-weight: lighter;
+  padding: 20px; }
+  .sobremi .info h2 {
+    text-align: left; }
 
 .conteiner-formulario .formulario form .campo, .conteiner-formulario .formulario form textarea {
   width: 100%;
