--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,8 +3,10 @@
 @import "titulos";
 @import "nav";
 @import "carrusel";
+@import "cartas";
 @import "grids";
 @import "sobremi";
 @import "formulario";
 @import "datos";
+@import "detalle-receta";
 @import "footer";
