--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,35 @@ h2 {
   .inicio .carousel {
     border: 5px solid #F8ECD1;
     border-radius: 10px;
-    box-shadow: 0px 3px 6px 0 #85586F; }
+    box-shadow: 0px 3px 6px 0 #000000; }
+
+.carta {
+  box-shadow: 0px 3px 6px 0 #000000;
+  width: 250px;
+  margin: 15px 15px;
+  padding-bottom: 10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: #F8ECD1;
+  color: black; }
+  .carta img {
+    border-radius: 5px;
+    object-fit: cover;
+    width: 100%;
+    height: 350px;
+    margin-bottom: 0; }
+  .carta button {
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px 5px;
+    border-radius: 20px;
+    border: 2px solid #85586F;
+    background-color: #85586F;
+    color: #F8ECD1; }
+  .carta button:hover {
+    background-color: #AC7D88; }
 
 .sobremi {
   display: grid;
@@ -124,6 +152,23 @@ h2 {
       margin-bottom: 5px; }
       .conteiner-formulario .datos ul li a i {
         margin-left: 10px; }
+
+.risotto-remolacha h2 {
+  text-align: left;
+  text-decoration: underline; }
+
+.risotto-remolacha #foto-risotto {
+  display: flex;
+  margin: 0 auto 30px;
+  width: 500px;
+  box-shadow: 0px 3px 6px 0 #000000; }
+  .risotto-remolacha #foto-risotto img {
+    width: 100%; }
+
+.risotto-remolacha .iframe {
+  padding-top: 30px;
+  display: flex;
+  justify-content: center; }
 
 footer {
   position: absolute;
