--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,6 @@ $color5: #FF7171;
 $font: 'Dosis', sans-serif;
 $font-size: 10px;
 $txtshdw: 0px 0px 15px $color1;
-$box-shadow:  0px 3px 6px 0 $color1;
+$box-shadow:  0px 3px 6px 0 #000000;
 $border-radius: 10px;
 $border: 2px solid $color1;
