--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+.titulos, h1, h2 {
+  color: #F8ECD1;
+  text-align: center;
+  text-shadow: 0px 0px 15px #85586F;
+  padding: 30px 0; }
+
 body {
   margin: 0px;
   background-color: #AC7D88;
@@ -11,12 +17,6 @@ body {
     max-width: 900px;
     color: #F8ECD1;
     font-size: 20px; }
-
-.titulos, h1, h2 {
-  color: #F8ECD1;
-  text-align: center;
-  text-shadow: 0px 0px 15px #85586F;
-  padding: 30px 0; }
 
 h1 {
   font-size: 60px;
@@ -60,29 +60,36 @@ h2 {
 
 .carta {
   box-shadow: 0px 3px 6px 0 #000000;
-  width: 250px;
-  margin: 15px 15px;
-  padding-bottom: 10px;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
+  border: none;
   border-radius: 5px;
+  color: #000000;
   background-color: #F8ECD1;
-  color: black; }
+  width: 250px;
+  height: auto;
+  margin: 15px 15px;
+  padding: 0 0 10px; }
   .carta img {
     border-radius: 5px;
     object-fit: cover;
     width: 100%;
     height: 350px;
-    margin-bottom: 0; }
+    margin: 0 0 5px;
+    padding: 2px; }
   .carta button {
+    transition: all 300ms ease;
     font-size: 14px;
     font-weight: bold;
-    padding: 5px 5px;
-    border-radius: 20px;
     border: 2px solid #85586F;
+    border-radius: 20px;
+    color: #F8ECD1;
     background-color: #85586F;
-    color: #F8ECD1; }
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 5px 5px; }
   .carta button:hover {
     background-color: #AC7D88; }
 
@@ -113,29 +120,31 @@ h2 {
     text-align: left; }
 
 .conteiner-formulario .formulario form .campo, .conteiner-formulario .formulario form textarea {
-  width: 100%;
-  padding: 15px 10px;
   font-size: 15px;
+  font-weight: bold;
   border: 2px solid #85586F;
-  margin-bottom: 10px;
   border-radius: 5px;
-  outline: 0px; }
+  color: #000000;
+  background-color: #F8ECD1;
+  width: 100%;
+  height: auto;
+  margin: 0 0 10px;
+  padding: 15px 10px; }
 
 .conteiner-formulario .formulario form textarea {
   height: 160px; }
 
 .conteiner-formulario .formulario form .btn-enviar {
-  padding: 10px;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   border: none;
-  outline: 0;
-  background-color: #F8ECD1;
+  border-radius: 30px;
   color: #85586F;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 300ms ease;
-  border-radius: 24px; }
+  background-color: #F8ECD1;
+  width: 150px;
+  height: auto;
+  margin: 0;
+  padding: 10px; }
 
 .conteiner-formulario .formulario form .btn-enviar:hover {
   background-color: #85586F;
@@ -173,15 +182,19 @@ h2 {
 footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
-  background-color: #F8ECD1;
-  color: #85586F;
   display: flex;
   justify-content: space-between;
-  padding: 5px 40px;
+  align-items: center;
   font-size: 20px;
   font-weight: bold;
-  align-items: center; }
+  border: none;
+  border-radius: 0;
+  color: #85586F;
+  background-color: #F8ECD1;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 5px 40px; }
   footer img {
     height: 40px; }
   footer a {
