--- a/scss/_cartas.scss
+++ b/scss/_cartas.scss
@@ -1,31 +1,19 @@
 .carta{
     box-shadow: $box-shadow;
-    width: 250px;
-    margin: 15px 15px;
-    padding-bottom: 10px;
     text-align: center;
-    font-size: $font-size*2;
-    font-weight: bold;
-    border-radius: $border-radius/2;
-    background-color: $color4;
-    color: black ;
+    @include box($font-size*2, bold, none, $border-radius/2, #000000, $color4);
+    @include size(250px, auto, 15px 15px, 0 0 10px);
 
     img{
         border-radius: $border-radius/2;
         object-fit: cover;
-        width: 100%;
-        height: 350px;
-        margin-bottom: 0;
+        @include size(100%, 350px, 0 0 5px, 2px);
     }
 
     button{
-        font-size: $font-size+4;
-        font-weight: bold;
-        padding: 5px 5px;
-        border-radius: $border-radius*2;
-        border: $border;
-        background-color: $color1;
-        color: $color4;
+        transition: all 300ms ease;
+        @include box($font-size+4, bold, $border, $border-radius*2, $color4, $color1);
+        @include size(auto, auto, 0, 5px 5px);
     }
 
     button:hover{
